# ebbflow

./: Cargo.toml  LICENSE  README.md  azure-pipelines.yml  ebbflow.service  ebbflow_0.5.4_amd64.deb  example.env
.github/workflows/: continuous-integration.yml
.rpm/: ebbflow.spec  ebbflowd.service
assets/: ebbflowd.service  windowswelcome.rtf
assets/debian/: postinst  postrm  prerm
docker/: Dockerfile  entrypoint.sh
dockerexample/: Dockerfile  README.md  entrypoint.sh
examples/: client.rs  server.rs
src/: certs.rs  config.rs  dns.rs  ebbflow.rs  ebbflowd.rs  infoserver.rs  lib.rs  main.rs  messagequeue.rs  messaging.rs  signal.rs
src/daemon/: connection.rs  health.rs  mod.rs
tests/: basic.rs  mockebb.rs
tests/certs/: myCA.key  myCA.pem  test.crt  test.key
wix/: main.wxs
