[package]
name = "ebbflow"
version = "0.5.7"
authors = ["Ryan Gorup <gorup@users.noreply.github.com>"]
edition = "2018"
readme = "README.md"
keywords = ["ssh", "proxy", "loadbalancer", "tcp", "ebbflow"]
maintenance = { status = "actively-developed" }
license-file = "LICENSE"
homepage = "https://ebbflow.io"
description = "The on-host executable client for interacting with Ebbflow.io"
categories = ["network-programming", "command-line-utilities", "web-programming"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ebbflow"
path = "src/ebbflow.rs"

[[bin]]
name = "ebbflowd"
path = "src/ebbflowd.rs"

[dependencies]
clap = "3.0.0-beta.1"
env_logger = "0.7.1"
futures = "0.3.5"
hostname = "0.3"
hyper-rustls = "0.20.0"
log = "0.4.8"
rand = { version = "0.7.3", features = ["small_rng"] }
rustls = "0.17"
tokio = { version = "0.2", features = ["full"] }
tokio-rustls = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.1"
rustls-native-certs = "0.3.0"
webpki = "0.21"
trust-dns-resolver = "0.19.5"
parking_lot = "0.10"
bitflags = "1.2"
notify = "5.0.0-pre.2"
serde_yaml = "0.8"
reqwest = { version = "0.10", features = ["json", "rustls-tls"], default-features = false }
ebbflow-api = { git = "https://github.com/ebbflow-io/ebbflow-api" }
#ebbflow-api = { path = "../ebb-api" }
regex = "1.3"
lazy_static = "1.4"
dirs-next = "1.0.1"

[target.'cfg(windows)'.dependencies]
windows-service = { git = "https://github.com/mullvad/windows-service-rs" }
winlog = { version = "0.2.5", features = ["env_logger"] }

[dev-dependencies]
hyper = "0.13"
hostname = "0.3"

[package.metadata.deb]
name = "ebbflow"
extended-description = """\
A command line utility for proxying data to Ebbflow (see https://ebbflow.io)."""
priority = "optional"
section = "net"
depends = "$auto"
conf-files = ["/etc/ebbflow/config.yaml"]
maintainer-scripts="assets/debian"
assets = [
    ["assets/ebbflowd.service", "/lib/systemd/system/ebbflowd.service", "644"],
    ["assets/empty.conf.yaml", "/etc/ebbflow/config.yaml", "600"],
    ["target/release/ebbflow", "/usr/bin/", "755"],
    ["target/release/ebbflowd", "/usr/sbin/", "755"]
]

#[package.metadata.rpm.cargo]
#buildflags = ["--release"]

#[package.metadata.rpm.targets]
#ebbflow = { path = "/usr/bin/ebbflow" }
#ebbflowd = { path = "/usr/sbin/ebbflowd" }

#[package.metadata.rpm.files]
#'ebbflowd.service' = { path = "/ebbflowd.service" }

[package.metadata.rpm.cargo]
buildflags = ["--release"]
target = "x86_64-unknown-linux-musl"

[package.metadata.rpm.targets]
ebbflow = { path = "/usr/bin/ebbflow" }
ebbflowd = { path = "/usr/sbin/ebbflowd" }

[package.metadata.rpm.files]
"ebbflowd.service" = { path = "/usr/lib/systemd/system/ebbflowd.service" }
