[package]
name = "ebbflow"
version = "1.1.0"
authors = ["Ryan Gorup <gorup@users.noreply.github.com>"]
edition = "2018"
readme = "README.md"
keywords = ["ssh", "proxy", "loadbalancer", "tcp", "ebbflow"]
maintenance = { status = "actively-developed" }
license-file = "LICENSE"
homepage = "https://ebbflow.io"
description = "The on-host executable client for interacting with Ebbflow.io"
categories = ["network-programming", "command-line-utilities", "web-programming"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ebbflow"
path = "src/ebbflow.rs"

[[bin]]
name = "ebbflowd"
path = "src/ebbflowd.rs"

[dependencies]
bitflags = "1.2"
chrono = "0.4"
clap = "3.0.0-beta.1"
ebbflow-api = { git = "https://github.com/ebbflow-io/ebbflow-api" }
env_logger = "0.7.1"
futures = "0.3.5"
hostname = "0.3"
hyper = "0.13"
hyper-rustls = "0.21.0"
lazy_static = "1.4"
log = "0.4.11"
notify = "5.0.0-pre.2"
parking_lot = "0.11"
rand = { version = "0.7.3", features = ["small_rng"] }
regex = "1.3"
reqwest = { version = "0.10", features = ["json", "rustls-tls"], default-features = false }
rustls = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.1"
serde_json = "1.0"
serde_yaml = "0.8"
tokio = { version = "0.2", features = ["full"] }
tokio-rustls = "0.14"
trust-dns-resolver = "0.19.5"
webpki = "0.21"

[target.'cfg(windows)'.dependencies]
windows-service = { git = "https://github.com/mullvad/windows-service-rs" }
winlog = { version = "0.2.6", features = ["env_logger"] }

[dev-dependencies]
hyper = "0.13"
hostname = "0.3"

###
### .deb package related!
###
[package.metadata.deb]
name = "ebbflow"
extended-description = """\
A command line utility for proxying data to Ebbflow (see https://ebbflow.io)."""
priority = "optional"
section = "net"
depends = "$auto"
conf-files = ["/etc/ebbflow/config.yaml", "/etc/ebbflow/host.key", "/etc/ebbflow/.daemonaddr"]
maintainer-scripts="assets/debian"
assets = [
    ["assets/ebbflowd.service", "/lib/systemd/system/ebbflowd.service", "644"],
    ["assets/empty.config.yaml", "/etc/ebbflow/config.yaml", "644"],
    ["assets/empty.key", "/etc/ebbflow/host.key", "600"],
    ["target/release/ebbflow", "/usr/bin/", "755"],
    ["target/release/ebbflowd", "/usr/sbin/", "755"]
]

###
### RPM Build related!
###
[package.metadata.rpm.cargo]
buildflags = ["--release"]
target = "x86_64-unknown-linux-musl"

[package.metadata.rpm.targets]
ebbflow = { path = "/usr/bin/ebbflow" }
ebbflowd = { path = "/usr/sbin/ebbflowd" }

[package.metadata.rpm.files]
"ebbflowd.service" = { path = "/usr/lib/systemd/system/ebbflowd.service", mode = "644" }
"empty.config.yaml" = { path = "/etc/ebbflow/config.yaml", mode = "644" }
"empty.key" = { path = "/etc/ebbflow/host.key", mode = "600" }
".emptydaemonaddr" = { path = "/etc/ebbflow/.daemonaddr", mode = "644" }
